[tool.poetry]
name = "beatport api client"
version = "4.0.0"
description = "Beatport API client"
authors = ["Félix Voituret <contact@mazard-records.com>"]
readme = "README.md"
packages = [
    { include = "beatport" },
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
